--- a/appcfg/package.json
+++ b/appcfg/package.json
@@ -11,13 +11,15 @@
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "axios": "^0.26.1",
+    "formik": "^2.4.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
