--- a/appcfg/package.json
+++ b/appcfg/package.json
@@ -14,9 +14,10 @@
     "formik": "^2.4.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
